--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -1,2 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Placeholder Info.plist -->
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" 
+"http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+  <key>CFBundleName</key>
+  <string>epidermysai</string>
+  <key>CFBundleIdentifier</key>
+  <string>com.example.epidermysai</string>
+  <key>CFBundleVersion</key>
+  <string>1</string>
+  <key>CFBundleShortVersionString</key>
+  <string>1.0.0</string>
+</dict>
+</plist>
