--- a/ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+++ b/ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
@@ -1,16 +1,70 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<Scheme LastUpgradeVersion="1330" version="1.3">
-  <BuildAction parallelizeBuildables="YES" buildImplicitDependencies="YES">
-    <BuildActionEntries>
-      <BuildActionEntry buildForTesting="YES" buildForRunning="YES" buildForProfiling="YES" buildForArchiving="YES" buildForAnalyzing="YES">
+<Scheme
+   LastUpgradeVersion = "1320"
+   version = "1.3">
+   <BuildAction
+      parallelizeBuildables = "YES"
+      buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Runner"
+               BuildableName = "Runner.app"
+               BlueprintName = "Runner"
+               ReferencedContainer = "container:Runner.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
+   </BuildAction>
+   <TestAction
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <Testables>
+      </Testables>
+    </TestAction>
+    <LaunchAction
+      buildConfiguration = "Debug"
+      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
+      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      launchStyle = "0"
+      useCustomWorkingDirectory = "NO"
+      ignoresPersistentStateOnLaunch = "NO"
+      debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
+      allowLocationSimulation = "YES">
+      <BuildableProductRunnable>
         <BuildableReference
-          BuildableIdentifier="primary"
-          BlueprintIdentifier="Runner"
-          BuildableName="Runner.app"
-          BlueprintName="Runner"
-          ReferencedContainer="container:Runner.xcodeproj">
+           BuildableIdentifier = "primary"
+           BlueprintIdentifier = "Runner"
+           BuildableName = "Runner.app"
+           BlueprintName = "Runner"
+           ReferencedContainer = "container:Runner.xcodeproj">
         </BuildableReference>
-      </BuildActionEntry>
-    </BuildActionEntries>
-  </BuildAction>
+      </BuildableProductRunnable>
+      <AdditionalOptions>
+      </AdditionalOptions>
+    </LaunchAction>
+    <ProfileAction
+      buildConfiguration = "Release"
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <BuildableProductRunnable>
+        <BuildableReference
+           BuildableIdentifier = "primary"
+           BlueprintIdentifier = "Runner"
+           BuildableName = "Runner.app"
+           BlueprintName = "Runner"
+           ReferencedContainer = "container:Runner.xcodeproj">
+        </BuildableReference>
+      </BuildableProductRunnable>
+    </ProfileAction>
+    <AnalyzeAction buildConfiguration = "Debug"/>
+    <ArchiveAction buildConfiguration = "Release"/>
 </Scheme>
